# jonny_ros2

./: .gitignore  README.md  activate.sh  can-down.sh  can-up.sh
ros/src/jenny_hardware_interface/: CMakeLists.txt  jenny_hardware_interface.xml  package.xml
ros/src/jenny_hardware_interface/include/: jenny_can_interface.hpp  jenny_motor_control.hpp
ros/src/jenny_hardware_interface/src/: can.cpp  homing.cpp  jenny_can_interface.cpp  jenny_hardware_interface.cpp  jenny_motor_control.cpp  joint_control.cpp  motor_control.cpp
ros/src/jenny_interfaces/: CMakeLists.txt  package.xml
ros/src/jenny_interfaces/msg/: JointStatus.msg
ros/src/jenny_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros/src/jenny_moveit_config/config/: initial_positions.yaml  jenny.ros2_control.xacro  jenny.srdf  jenny.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml  servo.yaml
ros/src/jenny_moveit_config/launch/: real_robot.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
ros/src/jenny_robot_description/: CMakeLists.txt  package.xml
ros/src/jenny_robot_description/urdf/: jenny.urdf  jenny.xacro  materials.xacro
ros/src/jonny_hardware_inferface/: CMakeLists.txt  jonny_hardware_interface.xml  package.xml
ros/src/jonny_hardware_inferface/include/: jonny_hardware_interface.hpp  jonny_robot_control.hpp
ros/src/jonny_hardware_inferface/src/: can.cpp  homing.cpp  joint_control.cpp  jonny_hardware_interface.cpp  jonny_robot_control.cpp  motor_control.cpp
ros/src/jonny_interfaces/: CMakeLists.txt  package.xml
ros/src/jonny_interfaces/msg/: HardwareStatus.msg
ros/src/jonny_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros/src/jonny_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  jonny.ros2_control.xacro  jonny.srdf  jonny.urdf.xacro  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo.yaml
ros/src/jonny_moveit_config/launch/: fake_robot.launch.py  real_robot.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  teleop_fake_robot.launch.py
ros/src/jonny_robot_description/: CMakeLists.txt  package.xml
ros/src/jonny_robot_description/meshes/: link_0.STL  link_1.STL  link_5.STL  link_6.STL
ros/src/jonny_robot_description/urdf/: jonny.urdf
ros/src/jonny_servo/: CMakeLists.txt  package.xml
ros/src/jonny_servo/src/: moveit_servo_interface.cpp
ros/src/jonny_teleop/: package.xml  setup.cfg  setup.py
ros/src/jonny_teleop/jonny_teleop/: keyboard_teleop.py  spacemouse_teleop.py
